Kubernetes_nginx/deployment_service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  myfrontend
  namespace: default
  labels:
    app:  myfrontend
spec:
  selector:
    matchLabels:
      app: myfrontend
  replicas: 3
  template:
    metadata:
      labels:
        app:  myfrontend
    spec:
      # initContainers:
        # Init containers are exactly like regular containers, except:
          # - Init containers always run to completion.
          # - Each init container must complete successfully before the next one starts.
      containers:
      - name:  myfrontend
        image:  varma1909/nginx_next_test:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: default
spec:
  selector:
    app: myfrontend
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30000
  type: LoadBalancer
